k8s/test/all.yaml
# ════════════════════════════════════════════════════════════════════════════════
# MONGO
# ════════════════════════════════════════════════════════════════════════════════
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: mongo-pvc
  namespace: test
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: test
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
# ════════════════════════════════════════════════════════════════════════════════
# BACKEND
# ════════════════════════════════════════════════════════════════════════════════
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: oussamazid/backend:latest
          ports:
            - containerPort: 3002
          envFrom:
          - secretRef:
              name: backend-secret
          - configMapRef:
              name: backend-config
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: test
spec:
  selector:
    app: backend
  ports:
    - port: 3002
      targetPort: 3002
---
# ════════════════════════════════════════════════════════════════════════════════
# FRONTEND
# ════════════════════════════════════════════════════════════════════════════════
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: oussamazid/frontend:latest
          ports:
            - containerPort: 3020
          envFrom:
          - secretRef:
              name: frontend-secret
          - configMapRef:
              name: frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3020
